@@ -10,6 +10,7 @@
     * Make SQLDrivers look in user as well as system odbcinst.ini for driver attributes
     * If in use, clear the ini cache when a write is done via SQLWritePrivateProfileString() so 
       the new value is read
+    * Fix problem with pooling if the environment was released by the application
 
 3rd-Aug-2015
 2.3.4
